youtube vid fix

--- a/K12sports.html
+++ b/K12sports.html
@@ -156,9 +156,17 @@
 <style type="text/css" data-asas-style="">body, div, a, p, span{ user-select: text !important; }p, h1, h2, h3, h4, h5, h6{ cursor: auto; user-select: text !important; }::selection{ background-color: #338FFF !important; color: #fff !important; }</style></head>
 
 <body style="">
+
+
+
+
+
+
     <div class="b-content">
-        <div id="bg_video_youtube" class="fr-widget fr-container fr_bg_video_youtube fr-having-bg-video" data-fr-bg-video-url="https://www.youtube.com/watch?v=FyCjYj10CJY">
-            <div class="fr-bg-video-container"><iframe id="youtube_player_bg_video_youtube" frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media" title="YouTube video player" width="640" height="360" src="./K12sports_files/FyCjYj10CJY.html" style="width: 1349px; height: 758.813px;"></iframe></div>
+        <div id="bg_video_youtube" class="fr-widget fr-container fr_bg_video_youtube fr-having-bg-video" data-fr-bg-video-url="https://www.youtube.com/watch?v=FyCjYj10CJY?rel=0&amp;autoplay=1">
+            <div class="fr-bg-video-container"><!-- <iframe id="youtube_player_bg_video_youtube" frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media" title="YouTube video player" width="640" height="360" src="https://www.youtube.com/watch?v=FyCjYj10CJY" style="width: 1349px; height: 758.813px;"></iframe> -->
+                <iframe width="1349" height="758.813"  src="https://www.youtube.com/embed/FyCjYj10CJY?rel=0&amp;controls=0&amp;showinfo=0?rel=0&amp;autoplay=1" frameborder="0"  encrypted-media" allowfullscreen="1"></iframe>
+            </div>
             <div class="fr-subwidgets-container">
                 <div id="container_2" class="fr-widget fr-container fr_container_2">
                     <div id="text_136" class="fr-widget fr-text fr-wf fr_text_bright_center fr_text_136">
@@ -181,7 +189,16 @@
                     </div>
                 </div>
             </div>
-        </div><!--
+        </div>
+
+
+
+
+
+
+
+
+        <!--
      --><div id="content_8" class="fr-widget fr-container fr_content_8">
             <div id="text_30" class="fr-widget fr-text fr-wf fr_text_large_bright_center fr_text_30">
                 <div class="fr-text wow fadeInRight">
