--- a/K12sports.html
+++ b/K12sports.html
@@ -180,10 +180,10 @@
                         </div>
                     </div><!--
                  --><div id="hd2_2_columns_2" class="fr-widget fr-grid fr_hd2_2_columns_2">
-                        <a id="text_137" class="fr-widget fr-text fr-wf fr_button_fill_white fr_text_137 fr-link" href="http://k12sports.in/#discover">
+                        <a id="text_137" class="fr-widget fr-text fr-wf fr_button_fill_white fr_text_137 fr-link" href="#discover">
                             <div class="fr-text">Need More Info</div>
                         </a><!--
-                     --><a id="text_138" class="fr-widget fr-text fr-wf fr_button fr_text_138 fr-link" href="http://k12sports.in/#form_4">
+                     --><a id="text_138" class="fr-widget fr-text fr-wf fr_button fr_text_138 fr-link" href="#form_4">
                             <div class="fr-text">Enroll Now</div>
                         </a>
                     </div>
